--- a/form-request.html
+++ b/form-request.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
+<title>REQUEST LIBUR / CUTI JADWAL BULAN NOVEMBER 2025</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
 
 <style>
@@ -271,3 +271,4 @@ document.getElementById("requestForm").addEventListener("submit", function(e){
 </script>
 </body>
 </html>
+
